убрал не актуальные шаги для мобильных тестов